Publishing to gh-pages

--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
      About | 
     Hugo Themes
   
-</title><meta name="description" content="Hugo, the world’s fastest framework for building websites"><meta name="author" content="Hugo Authors">
+</title><meta name="description" content="Hugo, the world’s fastest framework for building websites"><meta name="author" content="Lars Erik Storbukås">
 
 
     
