--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     Hugo Themes
   
-</title><meta name="description" content="Lorem ipsum dolor sit amet."><meta name="author" content="Hugo Authors">
+</title><meta name="description" content="Lorem ipsum dolor sit amet."><meta name="author" content="Lars Erik Storbukås">
 
 
     
